Add URL checking to CI
Signed-off-by: Dale Haiducek <19750917+dhaiducek@users.noreply.github.com>

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -6,15 +6,22 @@ on:
 
 jobs:
   asciidoc:
-    name: 'Build AsciiDocs'
+    name: Build AsciiDocs
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repository
-        uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579
+        uses: actions/checkout@v4
+
+      - name: Install asciidoctor
+        run: |
+          sudo apt-get install -y asciidoctor
+
       - name: Build each .adoc with Asciidoctor, fail on WARN or above
         run: |
-          FAILED=0
-          if ! docker run --rm -v $(pwd):/rhacm-docs/ asciidoctor/docker-asciidoctor@sha256:59a7e165ed6375dd5dfb930cb90019f1ccaee39787dc97a3918d7022a7503543 find /rhacm-docs/ -name \*.adoc -exec asciidoctor --failure-level WARN --trace --verbose --warnings {} +; then
-            echo "Build errors were detected, see per-file details above."
-            exit 1
-          fi
+          find . -name \*.adoc -exec asciidoctor --failure-level WARN --trace --verbose --warnings {} +
+
+      - name: Link Check
+        uses: lycheeverse/lychee-action@v1
+        with:
+          args: --no-progress --timeout 30 --scheme http --scheme https --require-https "./**/main.html"
+          fail: true
